--- a/index.html
+++ b/index.html
@@ -336,22 +336,22 @@
                   botao.classList.add('cota-selected');
                   switch (valorBotao) {
                       case 15:
-                          link = "https://pay.pagamentosseguropay.com/checkout/201fc2d2-7a93-4106-8d0b-c3c007d9fa5a";
+                          link = "https://pay.compraeguraapay.com.br/checkout/201fc2d2-7a93-4106-8d0b-c3c007d9fa5a";
                           break;
                       case 30:
-                          link = "https://pay.pagamentosseguropay.com/checkout/56125c40-e2de-499b-811b-be6d1ba1151b";
+                          link = "https://pay.compraeguraapay.com.br/checkout/56125c40-e2de-499b-811b-be6d1ba1151b";
                           break;
                       case 40:
-                          link = "https://pay.pagamentosseguropay.com/checkout/4a703ffb-3636-4d2a-b1ad-af25d41c897a";
+                          link = "https://pay.compraeguraapay.com.br/checkout/4a703ffb-3636-4d2a-b1ad-af25d41c897a";
                           break;
                       case 120:
-                          link = "https://pay.pagamentosseguropay.com/checkout/e68d7a87-f2f2-43bd-8821-a5acd1249df3";
+                          link = "https://pay.compraeguraapay.com.br/checkout/e68d7a87-f2f2-43bd-8821-a5acd1249df3";
                           break;
                       case 200:
-                          link = "https://pay.pagamentosseguropay.com/checkout/ccb3c624-7e58-4ac3-9c43-57f5fc4b0ddf";
+                          link = "https://pay.compraeguraapay.com.br/checkout/ccb3c624-7e58-4ac3-9c43-57f5fc4b0ddf";
                           break;
                               case 500:
-                          link = "https://pay.pagamentosseguropay.com/checkout/0b8a720b-9c71-413d-9a4b-739dbf71114e";
+                          link = "https://pay.compraeguraapay.com.br/checkout/0b8a720b-9c71-413d-9a4b-739dbf71114e";
                           break;
                   
                       default:
