--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
 <script>
   // ALTERE O LINK PARA A PÁGINA QUE QUISER MOSTRAR QUANDO O USUÁRIO TENTAR SAIR
-  const link = 'https://vivasorte.github.io/principal/';
+  const link = 'https://viva-sorte.github.io/desconto/';
 
   function setBackRedirect(url) {
     let urlBackRedirect = url;
